--- a/core/package.json
+++ b/core/package.json
@@ -1,6 +1,6 @@
 {
   "name": "snowplow-tracker-core",
-  "version": "0.6.0",
+  "version": "0.6.0-beta2",
   "devDependencies": {
     "grunt": "0.4.5",
     "intern": "3.3.2",
