--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
     "browser-cookie-lite": "0.3.1",
     "jstimezonedetect": "1.0.5",
     "lodash": "3.10.1",
-    "snowplow-tracker-core": "0.6.0",
+    "snowplow-tracker-core": "0.6.0-beta2",
     "murmurhash": "0.0.2",
     "uuid": "2.0.3",
     "sha1": "git://github.com/pvorb/node-sha1.git#v1.0.0"
